<resources>
    <string name="app_name">Weather App</string>
    <string name="title_activity_user_map">Current Weather</string>
    <string name="testing">Testing the layout</string>
    <string name="scan_wifi">Scan for Network</string>
    <string name="wifi_info">Submit WiFi Info</string>
    <string name="name">Name:</string>
    <string name="address">Address:</string>
    <string name="wifi_name">wifi_name</string>
    <string name="strength">Strength:</string>
    <string name="wifi_strength">wifi_strength</string>
    <string name="capabilities">Capabilities:</string>
    <string name="wifi_capabilities">wifi_capabilities</string>
    <string name="venue_name">Venue Name:</string>
    <string name="submit_list">Submit Network List</string>
    <string name="network">Network</string>
    <string name="pin_location">Pin Location</string>
    <string name="weather">Country: </string>
    <string name="icon">Province: </string>
    <string name="description">City/Town: </string>
    <string name="forecast_id">Feature Name: </string>
    <string name="home">Refresh</string>
</resources>