<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/weather_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="1dp"
    card_view:cardBackgroundColor="@android:color/transparent"
    card_view:cardCornerRadius="10dp"
    card_view:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/transparent_background"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content">

            <TextView
                style="@style/freeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weather" />

            <TextView
                android:id="@+id/weather_name"
                style="@style/standardText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi_name" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content">

            <TextView
                style="@style/freeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/icon" />

            <TextView
                android:id="@+id/weather_address"
                style="@style/standardText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi_name" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content">

            <TextView
                style="@style/freeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description" />

            <TextView
                android:id="@+id/weather_capabilities"
                style="@style/standardText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi_capabilities" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content">

            <TextView
                style="@style/freeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forecast_id" />

            <TextView
                android:id="@+id/weather_venueName"
                style="@style/standardText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/venue_name" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>